[gd_scene format=3 uid="uid://d04pds81kg28m"]

[ext_resource type="Texture2D" uid="uid://dgkv24ctyvjca" path="res://Assets/Reward Asset/Frame 6.png" id="1_7dtqh"]
[ext_resource type="Script" uid="uid://b4ax2sj3mp6cq" path="res://Script/reward_screen.gd" id="1_xsupf"]
[ext_resource type="AudioStream" uid="uid://lht78rn47nj6" path="res://Assets/Reward Asset/GOOD JOB.mp3" id="7_xu1ji"]
[ext_resource type="Texture2D" uid="uid://gaieiy1j7y7f" path="res://Assets/Reward Asset/fallingstar/Group 465.png" id="8_50aed"]
[ext_resource type="AudioStream" uid="uid://dp1ghqic0h3l1" path="res://Assets/Reward Asset/Victory Sound Effect (mp3cut.net).mp3" id="8_xu1ji"]
[ext_resource type="Texture2D" uid="uid://bts8enbl8cu6s" path="res://Assets/Reward Asset/fallingstar/Group 466.png" id="9_rwim0"]
[ext_resource type="Texture2D" uid="uid://blbtqccsjpdds" path="res://Assets/Reward Asset/fallingstar/Group 467.png" id="10_fjdmn"]
[ext_resource type="Texture2D" uid="uid://dswkef2hehphp" path="res://Assets/Reward Asset/fallingstar/Group 468.png" id="11_vb1sk"]
[ext_resource type="Texture2D" uid="uid://2a35jf3ktlst" path="res://Assets/Reward Asset/fallingstar/Group 469.png" id="12_ap1yg"]
[ext_resource type="Texture2D" uid="uid://dq8n6kytblxsd" path="res://Assets/Reward Asset/fallingstar/Group 470.png" id="13_67ufh"]
[ext_resource type="Texture2D" uid="uid://c6frchljybhby" path="res://Assets/Reward Asset/fallingstar/Group 471.png" id="14_7m18j"]
[ext_resource type="Texture2D" uid="uid://cpy1xg3svyc55" path="res://Assets/Reward Asset/fallingstar/Group 472.png" id="15_py7op"]
[ext_resource type="Texture2D" uid="uid://bd4xusthwlw4b" path="res://Assets/Reward Asset/fallingstar/Group 473.png" id="16_fw7lh"]
[ext_resource type="Texture2D" uid="uid://crvdnskkpsp1y" path="res://Assets/Reward Asset/fallingstar/Group 474.png" id="17_kf3aj"]
[ext_resource type="Texture2D" uid="uid://k2qcba8anl5h" path="res://Assets/Reward Asset/fallingstar/Group 475.png" id="18_7rkyg"]
[ext_resource type="Texture2D" uid="uid://c6px4oeob5w7y" path="res://Assets/Reward Asset/fallingstar/Group 476.png" id="19_dpnlf"]
[ext_resource type="Texture2D" uid="uid://dcgi824t71a16" path="res://Assets/Reward Asset/fallingstar/Group 477.png" id="20_fvpin"]
[ext_resource type="Texture2D" uid="uid://cwi43c8pwso65" path="res://Assets/Reward Asset/fallingstar/Group 478.png" id="21_272j7"]
[ext_resource type="Texture2D" uid="uid://mlli0vxteuf4" path="res://Assets/Reward Asset/fallingstar/Group 479.png" id="22_awtnm"]
[ext_resource type="Texture2D" uid="uid://bjerccf02mk5j" path="res://Assets/Reward Asset/fallingstar/Group 480.png" id="23_3knvo"]
[ext_resource type="Texture2D" uid="uid://5duhbw7wflt8" path="res://Assets/Reward Asset/fallingstar/Group 481.png" id="24_v56ny"]
[ext_resource type="Texture2D" uid="uid://rbx4dhchku4h" path="res://Assets/Reward Asset/fallingstar/Group 482.png" id="25_4qw3w"]
[ext_resource type="Texture2D" uid="uid://d3745qjbwpxjp" path="res://Assets/Reward Asset/fallingstar/Group 483.png" id="26_hmion"]
[ext_resource type="Texture2D" uid="uid://di1t3nak5v1wo" path="res://Assets/Reward Asset/fallingstar/Group 484.png" id="27_jictl"]
[ext_resource type="Texture2D" uid="uid://jdtujh0ph0uy" path="res://Assets/Reward Asset/fallingstar/Group 485.png" id="28_vxmwg"]
[ext_resource type="Texture2D" uid="uid://c1lsxjm5bf62" path="res://Assets/Reward Asset/fallingstar/Group 486.png" id="29_64p5c"]
[ext_resource type="Texture2D" uid="uid://bgwyom4sco506" path="res://Assets/Reward Asset/fallingstar/Group 487.png" id="30_d2liv"]
[ext_resource type="Texture2D" uid="uid://bdvbw1ma5e61c" path="res://Assets/Reward Asset/fallingstar/Group 488.png" id="31_3hm3u"]
[ext_resource type="Texture2D" uid="uid://d4lxd62yttbmu" path="res://Assets/Reward Asset/fallingstar/Group 489.png" id="32_gohmt"]
[ext_resource type="Texture2D" uid="uid://25oir57uwe1q" path="res://Assets/Reward Asset/fallingstar/Group 490.png" id="33_35kfk"]
[ext_resource type="Texture2D" uid="uid://bqbx0ixbu0rey" path="res://Assets/Reward Asset/fallingstar/Group 491.png" id="34_w6yow"]
[ext_resource type="Texture2D" uid="uid://6jf4aqno1bp7" path="res://Assets/Reward Asset/fallingstar/Group 492.png" id="35_kvq5l"]
[ext_resource type="Texture2D" uid="uid://cbjpq4jyo20sn" path="res://Assets/Reward Asset/fallingstar/Group 493.png" id="36_i8ba3"]
[ext_resource type="Texture2D" uid="uid://0r6vp4e3bvi1" path="res://Assets/Reward Asset/fallingstar/Group 494.png" id="37_r7syp"]
[ext_resource type="Texture2D" uid="uid://br1nk34jjykr4" path="res://Assets/Reward Asset/fallingstar/Group 495.png" id="38_uncxp"]
[ext_resource type="Texture2D" uid="uid://ckupyjdrrg2hq" path="res://Assets/Reward Asset/fallingstar/Group 496.png" id="39_vmsit"]
[ext_resource type="Texture2D" uid="uid://dhp2nr04ph1mo" path="res://Assets/Reward Asset/fallingstar/Group 497.png" id="40_8tr4y"]
[ext_resource type="Texture2D" uid="uid://dkehromfrikru" path="res://Assets/Reward Asset/fallingstar/Group 498.png" id="41_fdqps"]
[ext_resource type="Texture2D" uid="uid://cp86spdtvahd2" path="res://Assets/Reward Asset/fallingstar/Group 499.png" id="42_5napl"]
[ext_resource type="Texture2D" uid="uid://ce6khai1occh3" path="res://Assets/Reward Asset/fallingstar/Group 500.png" id="43_3nloe"]
[ext_resource type="Texture2D" uid="uid://0r4cx4opelyx" path="res://Assets/Reward Asset/fallingstar/Group 501.png" id="44_eemwc"]
[ext_resource type="Texture2D" uid="uid://b0rh4y5bv3q6o" path="res://Assets/Reward Asset/fallingstar/Group 502.png" id="45_ybbsk"]
[ext_resource type="Texture2D" uid="uid://82pyl81hwfov" path="res://Assets/Reward Asset/fallingstar/Group 503.png" id="46_7prk2"]
[ext_resource type="Texture2D" uid="uid://c5vedfgxt12v0" path="res://Assets/Reward Asset/fallingstar/Group 504.png" id="47_d87qd"]
[ext_resource type="Texture2D" uid="uid://8fh5neqr4hv3" path="res://Assets/Reward Asset/fallingstar/Group 505.png" id="48_ecivh"]
[ext_resource type="Texture2D" uid="uid://u4imgrmq32l6" path="res://Assets/Reward Asset/fallingstar/Group 506.png" id="49_d8ykr"]
[ext_resource type="Texture2D" uid="uid://cyg53eh4dqyjs" path="res://Assets/Reward Asset/fallingstar/Group 507.png" id="50_082ob"]
[ext_resource type="Texture2D" uid="uid://mhhc7ioo1okf" path="res://Assets/Reward Asset/fallingstar/Group 508.png" id="51_6e0x5"]
[ext_resource type="Texture2D" uid="uid://d58fqld454kq" path="res://Assets/Reward Asset/fallingstar/Group 509.png" id="52_p15j2"]
[ext_resource type="Texture2D" uid="uid://c8mnfpi8pr5mi" path="res://Assets/Reward Asset/fallingstar/Group 510.png" id="53_rmd4r"]
[ext_resource type="Texture2D" uid="uid://cw3h4lx3xfbma" path="res://Assets/Reward Asset/fallingstar/Group 511.png" id="54_ysbv7"]
[ext_resource type="Texture2D" uid="uid://cihugoonpt3ph" path="res://Assets/Reward Asset/fallingstar/Group 512.png" id="55_vheur"]
[ext_resource type="Texture2D" uid="uid://b8aioo8ullfka" path="res://Assets/Reward Asset/fallingstar/Group 513.png" id="56_hyybr"]
[ext_resource type="Texture2D" uid="uid://bpupmkj4hycve" path="res://Assets/Reward Asset/fallingstar/Group 514.png" id="57_3n4ug"]
[ext_resource type="Texture2D" uid="uid://mcyphan458ij" path="res://Assets/Reward Asset/fallingstar/Group 515.png" id="58_0t6ou"]
[ext_resource type="Texture2D" uid="uid://bis0qbgqe11tu" path="res://Assets/Reward Asset/fallingstar/Group 516.png" id="59_wijps"]
[ext_resource type="Texture2D" uid="uid://cvr3oqdumfycw" path="res://Assets/Reward Asset/fallingstar/Group 517.png" id="60_4gdod"]
[ext_resource type="Texture2D" uid="uid://vggi7riie2aj" path="res://Assets/Reward Asset/fallingstar/Group 518.png" id="61_hhgqc"]
[ext_resource type="Texture2D" uid="uid://dsybc1sha36dw" path="res://Assets/Reward Asset/fallingstar/Group 519.png" id="62_oa17j"]
[ext_resource type="Texture2D" uid="uid://b7ccjykuhjsij" path="res://Assets/Reward Asset/fallingstar/Group 520.png" id="63_das11"]
[ext_resource type="Texture2D" uid="uid://kbdlxdxm0rbt" path="res://Assets/Reward Asset/fallingstar/Group 521.png" id="64_ng4xf"]
[ext_resource type="Texture2D" uid="uid://b6wlvbqkwgvkr" path="res://Assets/Reward Asset/fallingstar/Group 522.png" id="65_df8de"]
[ext_resource type="Texture2D" uid="uid://do4u6g17w63xj" path="res://Assets/Reward Asset/fallingstar/Group 523.png" id="66_o66hd"]
[ext_resource type="Texture2D" uid="uid://cm3fwyp8nl1n" path="res://Assets/Reward Asset/fallingstar/Group 524.png" id="67_swfo8"]
[ext_resource type="Texture2D" uid="uid://derbpusrid7un" path="res://Assets/Reward Asset/fallingstar/Group 525.png" id="68_7muah"]
[ext_resource type="Texture2D" uid="uid://5jf8tvdrh3x7" path="res://Assets/Reward Asset/fallingstar/Group 526.png" id="69_7ffso"]
[ext_resource type="Texture2D" uid="uid://qpkn5epsuimp" path="res://Assets/Reward Asset/fallingstar/Group 527.png" id="70_qtpyi"]
[ext_resource type="Texture2D" uid="uid://cg2irqqdkc7c7" path="res://Assets/Reward Asset/fallingstar/Group 528.png" id="71_hrxwu"]
[ext_resource type="Texture2D" uid="uid://bnu0ojjl0m3pn" path="res://Assets/Reward Asset/fallingstar/Group 529.png" id="72_0cvoj"]
[ext_resource type="Texture2D" uid="uid://dh4mh8kvu26ll" path="res://Assets/Reward Asset/fallingstar/Group 530.png" id="73_kvjlm"]
[ext_resource type="Texture2D" uid="uid://dw5ps8fq5ghcd" path="res://Assets/Reward Asset/fallingstar/Group 531.png" id="74_ccxb5"]
[ext_resource type="Texture2D" uid="uid://ckhcw01ssbpl5" path="res://Assets/Reward Asset/fallingstar/Group 532.png" id="75_gi675"]
[ext_resource type="Texture2D" uid="uid://brv3m0ps81apu" path="res://Assets/Reward Asset/fallingstar/Group 533.png" id="76_m7oau"]
[ext_resource type="Texture2D" uid="uid://b44dfd6yafyog" path="res://Assets/Reward Asset/fallingstar/Group 534.png" id="77_g3rl4"]
[ext_resource type="Texture2D" uid="uid://dheqcbr5dvij6" path="res://Assets/Reward Asset/fallingstar/Group 535.png" id="78_y23cd"]
[ext_resource type="Texture2D" uid="uid://b7bvf5w0yl7cj" path="res://Assets/Reward Asset/fallingstar/Group 536.png" id="79_ikru7"]
[ext_resource type="Texture2D" uid="uid://vt37qfevltre" path="res://Assets/Reward Asset/fallingstar/Group 537.png" id="80_a5olv"]
[ext_resource type="Texture2D" uid="uid://vp8i6x87l5gt" path="res://Assets/Reward Asset/fallingstar/Group 538.png" id="81_5i7l7"]
[ext_resource type="Texture2D" uid="uid://1ey5sbn4g05n" path="res://Assets/Reward Asset/fallingstar/Group 539.png" id="82_bpipb"]
[ext_resource type="Texture2D" uid="uid://bqor7j5wd4jot" path="res://Assets/Reward Asset/fallingstar/Group 540.png" id="83_qy1am"]
[ext_resource type="Texture2D" uid="uid://c4dgs08rqj4dl" path="res://Assets/Reward Asset/fallingstar/Group 541.png" id="84_f1rer"]
[ext_resource type="Texture2D" uid="uid://d3j17lmboy2d4" path="res://Assets/Reward Asset/fallingstar/Group 542.png" id="85_6g3uf"]
[ext_resource type="Texture2D" uid="uid://bapu0jgx13ymm" path="res://Assets/Reward Asset/fallingstar/Group 543.png" id="86_th2ss"]
[ext_resource type="Texture2D" uid="uid://dr1lfm8inxxn0" path="res://Assets/Reward Asset/fallingstar/Group 544.png" id="87_bt4f3"]
[ext_resource type="Texture2D" uid="uid://dwo4bh1esatu5" path="res://Assets/Reward Asset/fallingstar/Group 545.png" id="88_n8v1v"]
[ext_resource type="Texture2D" uid="uid://c1bioldyr88k5" path="res://Assets/Reward Asset/fallingstar/Group 546.png" id="89_b5mmd"]
[ext_resource type="Texture2D" uid="uid://clyun18ehakkm" path="res://Assets/Reward Asset/fallingstar/Group 547.png" id="90_k7udh"]
[ext_resource type="Texture2D" uid="uid://coi34ffgsub8d" path="res://Assets/Reward Asset/fallingstar/Group 548.png" id="91_qrlxm"]
[ext_resource type="Texture2D" uid="uid://c74id32tpjgav" path="res://Assets/Reward Asset/fallingstar/Group 549.png" id="92_nqntp"]
[ext_resource type="Texture2D" uid="uid://dxbfge1ienq0x" path="res://Assets/Reward Asset/fallingstar/Group 550.png" id="93_m6ffg"]
[ext_resource type="Texture2D" uid="uid://ddxvsmw7lknlt" path="res://Assets/Reward Asset/fallingstar/Group 551.png" id="94_kmcxf"]
[ext_resource type="Texture2D" uid="uid://fbrx7iswygis" path="res://Assets/Reward Asset/fallingstar/Group 552.png" id="95_1rwe8"]
[ext_resource type="Texture2D" uid="uid://najk1337dud0" path="res://Assets/Reward Asset/fallingstar/Group 553.png" id="96_0kx8h"]
[ext_resource type="Texture2D" uid="uid://cego4fq2kpkmv" path="res://Assets/Reward Asset/fallingstar/Group 554.png" id="97_5nuw1"]
[ext_resource type="Texture2D" uid="uid://rcuvdif108od" path="res://Assets/Reward Asset/fallingstar/Group 555.png" id="98_okrss"]
[ext_resource type="Texture2D" uid="uid://imwdo8jc8her" path="res://Assets/Reward Asset/fallingstar/Group 556.png" id="99_0uyj0"]
[ext_resource type="Texture2D" uid="uid://dqntyxv1y4vfd" path="res://Assets/Reward Asset/fallingstar/Group 557.png" id="100_vywwn"]
[ext_resource type="Texture2D" uid="uid://b82gyqh34u1fc" path="res://Assets/Reward Asset/fallingstar/Group 558.png" id="101_u034h"]
[ext_resource type="Texture2D" uid="uid://bcnavpsj5gpuk" path="res://Assets/Reward Asset/fallingstar/Group 559.png" id="102_ruafp"]
[ext_resource type="Texture2D" uid="uid://c0jqabnj0wk6m" path="res://Assets/Reward Asset/fallingstar/Group 560.png" id="103_52xix"]
[ext_resource type="Texture2D" uid="uid://do4j384ws87ny" path="res://Assets/Reward Asset/fallingstar/Group 561.png" id="104_g65i6"]
[ext_resource type="Texture2D" uid="uid://chaip675qm0xg" path="res://Assets/Reward Asset/fallingstar/Group 562.png" id="105_7h426"]
[ext_resource type="Texture2D" uid="uid://cadgnixsqqqan" path="res://Assets/Reward Asset/fallingstar/Group 563.png" id="106_m1ifh"]
[ext_resource type="Texture2D" uid="uid://crtoecqjhyaqs" path="res://Assets/Reward Asset/fallingstar/Group 564.png" id="107_w2swv"]
[ext_resource type="Texture2D" uid="uid://bftaaqxb34i1m" path="res://Assets/Reward Asset/fallingstar/Group 565.png" id="108_5gvi1"]
[ext_resource type="Texture2D" uid="uid://hni1crsqc82a" path="res://Assets/Reward Asset/fallingstar/Group 566.png" id="109_gf3cv"]
[ext_resource type="Texture2D" uid="uid://ct2303bgjbnff" path="res://Assets/Reward Asset/fallingstar/Group 567.png" id="110_fwq17"]
[ext_resource type="Texture2D" uid="uid://dulgdnpviyah6" path="res://Assets/Reward Asset/fallingstar/Group 568.png" id="111_u7dtu"]
[ext_resource type="Texture2D" uid="uid://k1utmbrkwg0e" path="res://Assets/Reward Asset/fallingstar/Group 569.png" id="112_cbu5u"]
[ext_resource type="Texture2D" uid="uid://b6dstr18gv4at" path="res://Assets/Reward Asset/fallingstar/Group 570.png" id="113_r2rdf"]
[ext_resource type="Texture2D" uid="uid://gjrli1smbuth" path="res://Assets/Reward Asset/fallingstar/Group 571.png" id="114_orclx"]
[ext_resource type="Texture2D" uid="uid://p0do43l2oa72" path="res://Assets/Reward Asset/fallingstar/Group 572.png" id="115_485de"]
[ext_resource type="Texture2D" uid="uid://dx5xvm87nr2rj" path="res://Assets/Reward Asset/fallingstar/Group 573.png" id="116_51t4y"]
[ext_resource type="Texture2D" uid="uid://dbjipfwuswi4c" path="res://Assets/Reward Asset/fallingstar/Group 574.png" id="117_qpyfq"]
[ext_resource type="Texture2D" uid="uid://dvt4ovtq5qked" path="res://Assets/Reward Asset/fallingstar/Group 575.png" id="118_hal3b"]
[ext_resource type="Texture2D" uid="uid://bnvdb147w12vh" path="res://Assets/Reward Asset/fallingstar/Group 576.png" id="119_sleam"]
[ext_resource type="Texture2D" uid="uid://f45j77evr2by" path="res://Assets/Reward Asset/fallingstar/Group 577.png" id="120_enosh"]
[ext_resource type="Texture2D" uid="uid://du1q6kh7psmr6" path="res://Assets/Reward Asset/fallingstar/Group 578.png" id="121_osl81"]
[ext_resource type="Texture2D" uid="uid://ct186fui3fumq" path="res://Assets/Reward Asset/fallingstar/Group 579.png" id="122_7arab"]
[ext_resource type="Texture2D" uid="uid://c0a168s647vxv" path="res://Assets/Reward Asset/fallingstar/Group 580.png" id="123_cwpjp"]
[ext_resource type="Texture2D" uid="uid://chrh2cwwdrxww" path="res://Assets/Reward Asset/fallingstar/Group 581.png" id="124_jix8x"]
[ext_resource type="Texture2D" uid="uid://6le0jcctt0pd" path="res://Assets/Reward Asset/fallingstar/Group 582.png" id="125_g4yxt"]
[ext_resource type="Texture2D" uid="uid://bw0xw7k0t1wq2" path="res://Assets/Reward Asset/Rectangle 516.png" id="126_gcxdq"]
[ext_resource type="Texture2D" uid="uid://ds1no3esyrrx" path="res://Assets/Reward Asset/fallingstar/Group 583.png" id="126_vatas"]
[ext_resource type="Texture2D" uid="uid://bm8ox6o4fo5up" path="res://Assets/Reward Asset/fallingstar/Group 584.png" id="127_7858g"]
[ext_resource type="Texture2D" uid="uid://cgc0rnyg0vhix" path="res://Assets/Reward Asset/Gemini_Generated_Image_rprkbarprkbarprk-removebg-preview.png" id="128_rwim0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1dekk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_50aed")
}, {
"duration": 1.0,
"texture": ExtResource("9_rwim0")
}, {
"duration": 1.0,
"texture": ExtResource("10_fjdmn")
}, {
"duration": 1.0,
"texture": ExtResource("11_vb1sk")
}, {
"duration": 1.0,
"texture": ExtResource("12_ap1yg")
}, {
"duration": 1.0,
"texture": ExtResource("13_67ufh")
}, {
"duration": 1.0,
"texture": ExtResource("14_7m18j")
}, {
"duration": 1.0,
"texture": ExtResource("15_py7op")
}, {
"duration": 1.0,
"texture": ExtResource("16_fw7lh")
}, {
"duration": 1.0,
"texture": ExtResource("17_kf3aj")
}, {
"duration": 1.0,
"texture": ExtResource("18_7rkyg")
}, {
"duration": 1.0,
"texture": ExtResource("19_dpnlf")
}, {
"duration": 1.0,
"texture": ExtResource("20_fvpin")
}, {
"duration": 1.0,
"texture": ExtResource("21_272j7")
}, {
"duration": 1.0,
"texture": ExtResource("22_awtnm")
}, {
"duration": 1.0,
"texture": ExtResource("23_3knvo")
}, {
"duration": 1.0,
"texture": ExtResource("24_v56ny")
}, {
"duration": 1.0,
"texture": ExtResource("25_4qw3w")
}, {
"duration": 1.0,
"texture": ExtResource("26_hmion")
}, {
"duration": 1.0,
"texture": ExtResource("27_jictl")
}, {
"duration": 1.0,
"texture": ExtResource("28_vxmwg")
}, {
"duration": 1.0,
"texture": ExtResource("29_64p5c")
}, {
"duration": 1.0,
"texture": ExtResource("30_d2liv")
}, {
"duration": 1.0,
"texture": ExtResource("31_3hm3u")
}, {
"duration": 1.0,
"texture": ExtResource("32_gohmt")
}, {
"duration": 1.0,
"texture": ExtResource("33_35kfk")
}, {
"duration": 1.0,
"texture": ExtResource("34_w6yow")
}, {
"duration": 1.0,
"texture": ExtResource("35_kvq5l")
}, {
"duration": 1.0,
"texture": ExtResource("36_i8ba3")
}, {
"duration": 1.0,
"texture": ExtResource("37_r7syp")
}, {
"duration": 1.0,
"texture": ExtResource("38_uncxp")
}, {
"duration": 1.0,
"texture": ExtResource("39_vmsit")
}, {
"duration": 1.0,
"texture": ExtResource("40_8tr4y")
}, {
"duration": 1.0,
"texture": ExtResource("41_fdqps")
}, {
"duration": 1.0,
"texture": ExtResource("42_5napl")
}, {
"duration": 1.0,
"texture": ExtResource("43_3nloe")
}, {
"duration": 1.0,
"texture": ExtResource("44_eemwc")
}, {
"duration": 1.0,
"texture": ExtResource("45_ybbsk")
}, {
"duration": 1.0,
"texture": ExtResource("46_7prk2")
}, {
"duration": 1.0,
"texture": ExtResource("47_d87qd")
}, {
"duration": 1.0,
"texture": ExtResource("48_ecivh")
}, {
"duration": 1.0,
"texture": ExtResource("49_d8ykr")
}, {
"duration": 1.0,
"texture": ExtResource("50_082ob")
}, {
"duration": 1.0,
"texture": ExtResource("51_6e0x5")
}, {
"duration": 1.0,
"texture": ExtResource("52_p15j2")
}, {
"duration": 1.0,
"texture": ExtResource("53_rmd4r")
}, {
"duration": 1.0,
"texture": ExtResource("54_ysbv7")
}, {
"duration": 1.0,
"texture": ExtResource("55_vheur")
}, {
"duration": 1.0,
"texture": ExtResource("56_hyybr")
}, {
"duration": 1.0,
"texture": ExtResource("57_3n4ug")
}, {
"duration": 1.0,
"texture": ExtResource("58_0t6ou")
}, {
"duration": 1.0,
"texture": ExtResource("59_wijps")
}, {
"duration": 1.0,
"texture": ExtResource("60_4gdod")
}, {
"duration": 1.0,
"texture": ExtResource("61_hhgqc")
}, {
"duration": 1.0,
"texture": ExtResource("62_oa17j")
}, {
"duration": 1.0,
"texture": ExtResource("63_das11")
}, {
"duration": 1.0,
"texture": ExtResource("64_ng4xf")
}, {
"duration": 1.0,
"texture": ExtResource("65_df8de")
}, {
"duration": 1.0,
"texture": ExtResource("66_o66hd")
}, {
"duration": 1.0,
"texture": ExtResource("67_swfo8")
}, {
"duration": 1.0,
"texture": ExtResource("68_7muah")
}, {
"duration": 1.0,
"texture": ExtResource("69_7ffso")
}, {
"duration": 1.0,
"texture": ExtResource("70_qtpyi")
}, {
"duration": 1.0,
"texture": ExtResource("71_hrxwu")
}, {
"duration": 1.0,
"texture": ExtResource("72_0cvoj")
}, {
"duration": 1.0,
"texture": ExtResource("73_kvjlm")
}, {
"duration": 1.0,
"texture": ExtResource("74_ccxb5")
}, {
"duration": 1.0,
"texture": ExtResource("75_gi675")
}, {
"duration": 1.0,
"texture": ExtResource("76_m7oau")
}, {
"duration": 1.0,
"texture": ExtResource("77_g3rl4")
}, {
"duration": 1.0,
"texture": ExtResource("78_y23cd")
}, {
"duration": 1.0,
"texture": ExtResource("79_ikru7")
}, {
"duration": 1.0,
"texture": ExtResource("80_a5olv")
}, {
"duration": 1.0,
"texture": ExtResource("81_5i7l7")
}, {
"duration": 1.0,
"texture": ExtResource("82_bpipb")
}, {
"duration": 1.0,
"texture": ExtResource("83_qy1am")
}, {
"duration": 1.0,
"texture": ExtResource("84_f1rer")
}, {
"duration": 1.0,
"texture": ExtResource("85_6g3uf")
}, {
"duration": 1.0,
"texture": ExtResource("86_th2ss")
}, {
"duration": 1.0,
"texture": ExtResource("87_bt4f3")
}, {
"duration": 1.0,
"texture": ExtResource("88_n8v1v")
}, {
"duration": 1.0,
"texture": ExtResource("89_b5mmd")
}, {
"duration": 1.0,
"texture": ExtResource("90_k7udh")
}, {
"duration": 1.0,
"texture": ExtResource("91_qrlxm")
}, {
"duration": 1.0,
"texture": ExtResource("92_nqntp")
}, {
"duration": 1.0,
"texture": ExtResource("93_m6ffg")
}, {
"duration": 1.0,
"texture": ExtResource("94_kmcxf")
}, {
"duration": 1.0,
"texture": ExtResource("95_1rwe8")
}, {
"duration": 1.0,
"texture": ExtResource("96_0kx8h")
}, {
"duration": 1.0,
"texture": ExtResource("97_5nuw1")
}, {
"duration": 1.0,
"texture": ExtResource("98_okrss")
}, {
"duration": 1.0,
"texture": ExtResource("99_0uyj0")
}, {
"duration": 1.0,
"texture": ExtResource("100_vywwn")
}, {
"duration": 1.0,
"texture": ExtResource("101_u034h")
}, {
"duration": 1.0,
"texture": ExtResource("102_ruafp")
}, {
"duration": 1.0,
"texture": ExtResource("103_52xix")
}, {
"duration": 1.0,
"texture": ExtResource("104_g65i6")
}, {
"duration": 1.0,
"texture": ExtResource("105_7h426")
}, {
"duration": 1.0,
"texture": ExtResource("106_m1ifh")
}, {
"duration": 1.0,
"texture": ExtResource("107_w2swv")
}, {
"duration": 1.0,
"texture": ExtResource("108_5gvi1")
}, {
"duration": 1.0,
"texture": ExtResource("109_gf3cv")
}, {
"duration": 1.0,
"texture": ExtResource("110_fwq17")
}, {
"duration": 1.0,
"texture": ExtResource("111_u7dtu")
}, {
"duration": 1.0,
"texture": ExtResource("112_cbu5u")
}, {
"duration": 1.0,
"texture": ExtResource("113_r2rdf")
}, {
"duration": 1.0,
"texture": ExtResource("114_orclx")
}, {
"duration": 1.0,
"texture": ExtResource("115_485de")
}, {
"duration": 1.0,
"texture": ExtResource("116_51t4y")
}, {
"duration": 1.0,
"texture": ExtResource("117_qpyfq")
}, {
"duration": 1.0,
"texture": ExtResource("118_hal3b")
}, {
"duration": 1.0,
"texture": ExtResource("119_sleam")
}, {
"duration": 1.0,
"texture": ExtResource("120_enosh")
}, {
"duration": 1.0,
"texture": ExtResource("121_osl81")
}, {
"duration": 1.0,
"texture": ExtResource("122_7arab")
}, {
"duration": 1.0,
"texture": ExtResource("123_cwpjp")
}, {
"duration": 1.0,
"texture": ExtResource("124_jix8x")
}, {
"duration": 1.0,
"texture": ExtResource("125_g4yxt")
}, {
"duration": 1.0,
"texture": ExtResource("126_vatas")
}, {
"duration": 1.0,
"texture": ExtResource("127_7858g")
}],
"loop": true,
"name": &"default",
"speed": 18.0
}]

[node name="Reward Screen" type="Control" unique_id=457023432]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = -8.0
offset_right = 74.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xsupf")

[node name="GoodJob label" type="Label" parent="." unique_id=660658418]
z_index = 5
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0020001
offset_left = 109.5
offset_top = 419.5
offset_right = -98.5
offset_bottom = -446.36407
theme_override_colors/font_color = Color(0.17254902, 0.27450982, 0.37254903, 1)
theme_override_font_sizes/font_size = 48
text = "Good Job!"

[node name="BG" type="Sprite2D" parent="." unique_id=131263170]
z_as_relative = false
position = Vector2(304.00003, 508.00003)
scale = Vector2(4.3348837, 1.0901288)
texture = ExtResource("1_7dtqh")

[node name="Next" type="Button" parent="." unique_id=1681730663]
z_index = 4
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35900003
anchor_top = 0.64000005
anchor_right = 0.37300003
anchor_bottom = 0.776
offset_left = -56.11801
offset_top = 7.999939
offset_right = 65.053955
offset_bottom = 5.4799805
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.17254902, 0.27450982, 0.37254903, 1)
theme_override_colors/font_focus_color = Color(0.17254902, 0.27450982, 0.37254903, 1)
theme_override_colors/font_pressed_color = Color(0.17254902, 0.27450982, 0.37254903, 1)
theme_override_colors/font_hover_color = Color(0.17254902, 0.27450982, 0.37254903, 1)
theme_override_colors/font_hover_pressed_color = Color(0.17254902, 0.27450982, 0.37254903, 1)
theme_override_font_sizes/font_size = 28
text = "Next"
flat = true

[node name="GoodJob" type="AudioStreamPlayer" parent="." unique_id=64893915]
stream = ExtResource("7_xu1ji")

[node name="VictorySoundEffect(mp3Cut_net)" type="AudioStreamPlayer" parent="." unique_id=2054169381]
stream = ExtResource("8_xu1ji")
volume_db = -20.0

[node name="fallingstar" type="AnimatedSprite2D" parent="." unique_id=1944863586]
modulate = Color(1, 1, 1, 0.39215687)
z_index = 1
position = Vector2(224, 356)
scale = Vector2(1, 1.428)
sprite_frames = SubResource("SpriteFrames_1dekk")
autoplay = "default"

[node name="fallingstar2" type="AnimatedSprite2D" parent="." unique_id=2010693358]
modulate = Color(1, 1, 1, 0.39215687)
z_index = 1
position = Vector2(720, 358)
scale = Vector2(1, 1.432)
sprite_frames = SubResource("SpriteFrames_1dekk")
autoplay = "default"

[node name="fallingstar3" type="AnimatedSprite2D" parent="." unique_id=2113844225]
modulate = Color(1, 1, 1, 0.39215687)
z_index = 1
position = Vector2(-262, 357.00003)
scale = Vector2(1, 1.432)
sprite_frames = SubResource("SpriteFrames_1dekk")
autoplay = "default"

[node name="Star Middle" type="Sprite2D" parent="." unique_id=1844136722]
z_index = 3
position = Vector2(224.00002, 318.00003)
scale = Vector2(0.30782557, 0.29866135)
texture = ExtResource("128_rwim0")

[node name="Star Right" type="Sprite2D" parent="." unique_id=1679694413]
z_index = 3
position = Vector2(335.99997, 325.99997)
scale = Vector2(0.28687668, 0.28536543)
texture = ExtResource("128_rwim0")

[node name="Star Left" type="Sprite2D" parent="." unique_id=747972831]
z_index = 3
position = Vector2(111.99994, 325.99997)
scale = Vector2(0.28687668, 0.28536543)
texture = ExtResource("128_rwim0")

[node name="Rectangle516" type="Sprite2D" parent="." unique_id=519548149]
visible = false
z_index = -1
z_as_relative = false
position = Vector2(306, 471)
scale = Vector2(0.47556007, 0.5316027)
texture = ExtResource("126_gcxdq")

[node name="child name" type="Label" parent="." unique_id=1767457969]
layout_mode = 0
offset_left = 176.0
offset_top = 552.0
offset_right = 262.0
offset_bottom = 575.0
theme_override_colors/font_color = Color(0.17254902, 0.27450982, 0.37254903, 1)
text = "child name"
